--- a/prescription_management/views/prescription_edit_templates.xml
+++ b/prescription_management/views/prescription_edit_templates.xml
@@ -47,7 +47,7 @@
                                         <option value="">-- Chọn bác sĩ --</option>
                                         <t t-foreach="staff" t-as="s">
                                             <option t-att-value="s.id">
-                                                <t t-esc="s.name"/>
+                                                <t t-esc="s.staff_name"/>
                                             </option>
                                         </t>
                                     </select>
@@ -117,7 +117,7 @@
                         <div class="alert alert-info">
                             <strong>Bệnh nhân:</strong> <t t-esc="prescription.patient_id.name"/> (<t t-esc="prescription.patient_id.code"/>)
                             <t t-if="prescription.staff_id">
-                                | <strong>Bác sĩ:</strong> <t t-esc="prescription.staff_id.name"/>
+                                | <strong>Bác sĩ:</strong> <t t-esc="prescription.staff_id.staff_name"/>
                             </t>
                             | <strong>Số ngày uống:</strong> <t t-esc="prescription.numdate"/> ngày
                         </div>
