--- a/prescription_management/views/clinic_service_templates.xml
+++ b/prescription_management/views/clinic_service_templates.xml
@@ -4,6 +4,16 @@
     <template id="clinic_services_template" name="Clinic Services">
         <t t-call="website.layout">
             <div class="container mt-4">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
+                                <li class="breadcrumb-item active">Dịch vụ phòng khám</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
                 <div class="row mb-4">
                     <div class="col-md-6">
                         <h1>Dịch vụ phòng khám</h1>
@@ -122,6 +132,16 @@
     <template id="clinic_service_detail_template" name="Clinic Service Detail">
         <t t-call="website.layout">
             <div class="container mt-4">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
+                                <li class="breadcrumb-item active">Dịch vụ phòng khám</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <nav aria-label="breadcrumb">
