--- a/prescription_management/views/pharmacy_product_templates.xml
+++ b/prescription_management/views/pharmacy_product_templates.xml
@@ -4,6 +4,16 @@
     <template id="pharmacy_products_template" name="Pharmacy Products">
         <t t-call="website.layout">
             <div class="container mt-4">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
+                                <li class="breadcrumb-item active">Kho dược phẩm</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
                 <div class="row mb-4">
                     <div class="col-md-6">
                         <h1>Kho dược phẩm</h1>
@@ -113,6 +123,16 @@
     <template id="pharmacy_product_detail_template" name="Pharmacy Product Detail">
         <t t-call="website.layout">
             <div class="container mt-4">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
+                                <li class="breadcrumb-item active">Kho dược phẩm</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <nav aria-label="breadcrumb">
