--- a/prescription_management/views/prescription_edit_templates.xml
+++ b/prescription_management/views/prescription_edit_templates.xml
@@ -7,10 +7,11 @@
                 <div class="row">
                     <div class="col-12">
                         <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/pharmacy/prescriptions">Đơn thuốc</a></li>
-                                <li class="breadcrumb-item active">Thêm mới</li>
-                            </ol>
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
+                            <li class="breadcrumb-item"><a href="/pharmacy/prescriptions">Đơn thuốc</a></li>
+                            <li class="breadcrumb-item active">Thêm mới</li>
+                        </ol>
                         </nav>
                     </div>
                 </div>
@@ -93,6 +94,7 @@
                     <div class="col-12">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
                                 <li class="breadcrumb-item"><a href="/pharmacy/prescriptions">Đơn thuốc</a></li>
                                 <li class="breadcrumb-item"><a t-att-href="'/pharmacy/prescription/%s' % prescription.id">Chi tiết</a></li>
                                 <li class="breadcrumb-item active">Chỉnh sửa</li>
