--- a/prescription_management/views/prescription_templates.xml
+++ b/prescription_management/views/prescription_templates.xml
@@ -74,6 +74,16 @@
                 }
             </style>
             <div class="container mt-5 prescription-container">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
+                                <li class="breadcrumb-item active">Đơn thuốc</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h1 class="mb-0">Đơn thuốc</h1>
                     <a href="/pharmacy/new_prescription" class="btn btn-success">
@@ -331,10 +341,14 @@
                 }
             </style>
             <div class="container mt-5 prescription-container">
-                <a href="/pharmacy/prescriptions" class="back-button">
-                    <i class="fa fa-arrow-left"></i> Quay lại danh sách
-                </a>
-
+                <div class="btn-group mb-3">
+                    <a href="/pharmacy/prescriptions" class="back-button">
+                        <i class="fa fa-arrow-left"></i> Quay lại danh sách
+                    </a>
+                    <a href="/pharmacy" class="back-button ml-2">
+                        <i class="fa fa-home"></i> Dashboard
+                    </a>
+                </div>
                 <button onclick="window.print()" class="btn btn-info float-right print-button">
                     <i class="fa fa-print"></i> In đơn thuốc
                 </button>
