--- a/prescription_management/views/prescription_update_template.xml
+++ b/prescription_management/views/prescription_update_template.xml
@@ -8,6 +8,7 @@
                     <div class="col-12">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/pharmacy">Dashboard</a></li>
                                 <li class="breadcrumb-item"><a href="/pharmacy/prescriptions">Đơn thuốc</a></li>
                                 <li class="breadcrumb-item"><a t-att-href="'/pharmacy/prescription/%s' % prescription.id">Chi tiết</a></li>
                                 <li class="breadcrumb-item active">Cập nhật thông tin</li>
